MNTOR-5209 - Fix scan cta alignment in Sign Up Form component

--- a/src/app/[locale]/(redesign)/(public)/SignUpForm.module.scss
+++ b/src/app/[locale]/(redesign)/(public)/SignUpForm.module.scss
@@ -1,10 +1,22 @@
 @use "../../../tokens";
 
 .form {
-  align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
   gap: tokens.$spacing-lg;
+  flex-direction: column;
+
+  @media screen and (min-width: tokens.$screen-sm) {
+    flex-direction: row;
+  }
+
+  // label positions
+  &.top {
+    align-items: flex-end;
+  }
+  &.bottom {
+    align-items: flex-start;
+  }
 
   div:first-child {
     display: flex;
